# awair

./: .envrc.example  .gitignore  CLAUDE.md  LAMBDA.md  LICENSE  README.md  awair.parquet.dvc  pyproject.toml  pyramid.yml
.github/workflows/: ci.yml  daily-data-update.yml  deploy.yml  e2e-tests.yml  publish.yml  test.yml  www-ci.yml
cfw/cascade/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
cfw/cascade/migrations/: 0001_shard_index.sql  0002_devices.sql  0003_shard_stats.sql  0004_footer_cache.sql
cfw/cascade/src/: backfill.ts  cascade.ts  devices.ts  index.ts  pyramid.ts  types.d.ts  write.ts
cfw/monitor/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
cfw/monitor/src/: index.ts
cfw/serve/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
cfw/serve/scripts/: smoke-test.ts
cfw/serve/src/: index.ts
scripts/: rewrite_parquet_row_groups.py  set-pypi-version.sh
specs/: cfw-cascade.md  pyrmts-migration.md
specs/done/: og-image-and-favicon.md
src/awair/: cli.py  database.py  dt.py  pyramid.yml  storage.py
src/awair/cli/: __init__.py  __main__.py  api.py  base.py  common_opts.py  config.py  data.py  data_cmd.py  device.py  device_cmd.py  lambda_cmd.py  lmbda.py  main.py  pyramid.py  raw.py  raw_cmd.py
src/awair/lambda/: .gitignore  CDK.md  README.md  app.py  cloudformation.yaml  deploy.py  deploy_pypi.py  requirements-runtime.txt  requirements.txt  updater.py
src/awair/lmbda/: .gitignore  README.md  __init__.py  app.py  deploy.py  requirements.txt  test_updater.py  updater.py
src/awair/pyramid/: __init__.py  builder.py  config.py  io.py
test/: test_cli.py
test/data/: snapshot.parquet
www/: .gitignore  .og-lambda.json  README.md  ROADMAP.md  USE-KBD-DEMO.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm.builds.json  test-og.mjs  tsconfig.functions.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
www/functions/: _middleware.ts  og.ts
www/functions/_lib/: og-card.ts  og-chart.ts
www/har-test/: .gitignore  README.md  analyze-drift.mjs  analyze-layout.mjs  check-rg-in-footer.mjs  extract-ranges.mjs  package.json  test-current-fetch.mjs
www/public/: CNAME  _redirects
www/src/: App.css  App.scss  App.tsx  main.tsx  vite-env.d.ts
www/src/components/: AggregationControl.tsx  AwairChart.test.ts  AwairChart.tsx  ChartComparison.tsx  ChartControls.tsx  CustomLegend.tsx  DataSummary.tsx  DataTable.tsx  DevicePoller.tsx  DeviceRenderSettings.tsx  DevicesControl.tsx  ErrorBoundary.tsx  ExamplesBar.tsx  HealthPage.scss  HealthPage.tsx  HoverableToggleButton.tsx  IntervalSelect.tsx  MobileSpeedDial.tsx  Omnibar.tsx  RangeControl.tsx  RangeWidthControl.tsx  SequenceModal.tsx  ShortcutsModalContent.tsx  SmoothingControl.tsx  ThemeToggle.tsx  TierTimeline.tsx  Tooltip.tsx  YAxesControl.tsx  groupRenderers.tsx
www/src/config/: hotkeyConfig.ts
www/src/contexts/: ThemeContext.tsx
www/src/hooks/: useAwairData.ts  useAwairDataWithRange.ts  useDataAggregation.ts  useDevices.ts  useHealth.ts  useKeyboardShortcuts.ts  useLatestMode.ts  useMetrics.ts  useMobile.ts  useMultiDeviceAggregation.ts  useMultiDeviceData.ts  useNow.ts  usePlotlyHoverDismiss.ts  useSmartPolling.ts  useTimeRangeParam.ts
www/test/: capture-har.mjs
www/test-data/: README.md  awair-137496.parquet  awair-17617.parquet  devices.parquet
(+42 files in other folders)
