[project]
name = "awair"
version = "0.0.1"
description = "Awair API wrapper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "requests",
    "sqlalchemy",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
[project.scripts]
awair = "awair.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
